# papyrus

./: .gitmodules  CMakeLists.txt  README.md  run_tests.sh  test.txt  test2.txt
.github/workflows/: ci.yml
src/: Application.cpp  Application.h  Argparser.h  CommandProcessor.cpp  CommandProcessor.h  CppLexer.cpp  CppLexer.h  CursorBlinker.cpp  CursorBlinker.h  Editor.cpp  Editor.h  EditorCommandHandler.cpp  EditorCommandHandler.h  EditorView.cpp  EditorView.h  EditorViewPort.cpp  EditorViewPort.h  FileBrowser.cpp  FileBrowser.h  FileBrowserView.cpp  FileBrowserView.h  IRenderBackend.h  LayoutManager.cpp  LayoutManager.h  RenderContext.h  RenderTypes.h  Renderer.cpp  Renderer.h  SDLRenderBackend.cpp  SDLRenderBackend.h  SearchEngine.cpp  SearchEngine.h  SearchSession.cpp  SearchSession.h  SearchView.cpp  SearchView.h  SearchViewPort.cpp  StartupOptions.h  StartupParser.cpp  SyntaxHighlighter.cpp  (+17 more)
src/Core/: Argparser.h  CMakeLists.txt  SDLUtil.h  StartupParser.h  logger.h  random.h  theme.h  types.h  util.h
src/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorCommandHandler.cpp  EditorCommandHandler.h  TextBuffer.cpp  TextBuffer.h  TextInput.cpp  UndoManager.cpp  UndoManager.h
src/FileBrowser/: CMakeLists.txt  FileBrowser.cpp  FileBrowser.h
src/Rendering/: AnimationPlaybackMode.h  CMakeLists.txt  CursorBlinker.h  IRenderBackend.h  ITextMeasurer.h  RenderContext.h  RenderTypes.h  Renderer.cpp  Renderer.h  SDLRenderBackend.cpp  SDLRenderBackend.h
src/Screensaver/: CMakeLists.txt  DvdScreensaver.cpp  DvdScreensaver.h  IScreensaverLogic.h  PongScreensaver.cpp  PongScreensaver.h  Screensaver.cpp  Screensaver.h  ScreensaverAssets.h
src/Search/: CMakeLists.txt  SearchEngine.cpp  SearchEngine.h  SearchSession.cpp  SearchSession.h
src/Syntax/: CMakeLists.txt  CppLexer.cpp  CppLexer.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
src/Terminal/: CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  CommandRegistry.cpp  CommandRegistry.h  Terminal.cpp  Terminal.h  TerminalActionRouter.h
src/Views/: CMakeLists.txt  EditorView.cpp  EditorView.h  EditorViewPort.cpp  EditorViewPort.h  FileBrowserView.cpp  FileBrowserView.h  LayoutManager.cpp  LayoutManager.h  ScreensaverView.cpp  ScreensaverView.h  SearchView.cpp  SearchView.h  SearchViewPort.cpp  SearchViewPort.h  TerminalView.cpp  TerminalView.h  TextLayout.cpp  TextLayout.h  Viewport.h
tests/: ApplicationTests.cpp  ArgParserTests.cpp  CMakeLists.txt  EditorCommandHandlerTests.cpp  EditorViewTests.cpp  FileBrowserTests.cpp  FileBrowserViewTests.cpp  LoggerTests.cpp  PongScreensaverTests.cpp  ScreensaverTests.cpp  ScreensaverViewTests.cpp  SearchTests.cpp  SearchViewTests.cpp  StartupParserTests.cpp  SyntaxTests.cpp  TerminalTests.cpp  TerminalViewTests.cpp  TextBufferTests.cpp  TextInputTests.cpp  ThemeTests.cpp  TypesTests.cpp  UndoManagerTests.cpp  UtilTests.cpp  ViewTestUtils.h
tools/: fix_gif_disposal.sh
